--- a/app/views/has_badges/index.html.erb
+++ b/app/views/has_badges/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>Id</th>
       <th>User</th>
       <th>Badge</th>
       <th colspan="3"></th>
@@ -12,6 +13,7 @@
   <tbody>
     <% @has_badges.each do |has_badge| %>
       <tr>
+        <td><%= has_badge.id %></td>
         <td><%= has_badge.user_id %></td>
         <td><%= has_badge.badge_id %></td>
         <td><%= link_to 'Show', has_badge %></td>
