added picture upload to check-in

--- a/app/views/checkins/show.html.erb
+++ b/app/views/checkins/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Picture:</strong>
-  <%= @checkin.picture %>
+  <%= image_tag(@checkin.picture_url, :width => 300) if @checkin.picture.present? %>
 </p>
 
 <p>
