--- a/app/views/checkins/_form.html.erb
+++ b/app/views/checkins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@checkin) do |f| %>
+<%= form_for(@checkin, :html => {:multipart => true}) do |f| %>
   <% if @checkin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@checkin.errors.count, "error") %> prohibited this checkin from being saved:</h2>
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :picture %><br>
-    <%= f.text_field :picture %>
+    <%= f.file_field :picture %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
