--- a/app/views/checkins/show.html.erb
+++ b/app/views/checkins/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Picture:</strong>
-  <%= image_tag(@checkin.picture_url, :width => 300) if @checkin.picture.present? %>
+  <%= @checkin.picture%>
 </p>
 
 <p>
