--- a/app/views/has_badges/_form.html.erb
+++ b/app/views/has_badges/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.text_field :user_id %>
   </div>
   <div class="field">
     <%= f.label :badge_id %><br>
