--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :plan_details %><br>
     <%= f.text_area :plan_details %>
   </div>
+  <div class="field">
+    <%= f.label :date_time %><br>
+    <%= f.datetime_select :date_time %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
