--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -6,6 +6,7 @@
       <th>User</th>
       <th>Name</th>
       <th>Plan details</th>
+      <th>Date time</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
         <td><%= plan.user_id %></td>
         <td><%= plan.name %></td>
         <td><%= plan.plan_details %></td>
+        <td><%= plan.date_time %></td>
         <td><%= link_to 'Show', plan %></td>
         <td><%= link_to 'Edit', edit_plan_path(plan) %></td>
         <td><%= link_to 'Destroy', plan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
