--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -15,5 +15,10 @@
   <%= @plan.plan_details %>
 </p>
 
+<p>
+  <strong>Date time:</strong>
+  <%= @plan.date_time %>
+</p>
+
 <%= link_to 'Edit', edit_plan_path(@plan) %> |
 <%= link_to 'Back', plans_path %>
