--- a/app/views/checkins/_form.html.erb
+++ b/app/views/checkins/_form.html.erb
@@ -28,8 +28,8 @@
     <%= f.text_field :user_id %>
   </div>
   <div class="field">
-    <%= f.label :recipe_id %><br>
-    <%= f.number_field :recipe_id %>
+    <%= f.label :category_id %><br>
+    <%= f.number_field :category_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
