--- a/app/views/checkins/index.html.erb
+++ b/app/views/checkins/index.html.erb
@@ -8,7 +8,7 @@
       <th>Date time</th>
       <th>Picture</th>
       <th>User</th>
-      <th>Recipe</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,7 +21,7 @@
         <td><%= checkin.date_time %></td>
         <td><%= checkin.picture %></td>
         <td><%= checkin.user_id %></td>
-        <td><%= checkin.recipe_id %></td>
+        <td><%= checkin.category_id %></td>
         <td><%= link_to 'Show', checkin %></td>
         <td><%= link_to 'Edit', edit_checkin_path(checkin) %></td>
         <td><%= link_to 'Destroy', checkin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
