--- a/app/views/checkins/show.html.erb
+++ b/app/views/checkins/show.html.erb
@@ -21,8 +21,8 @@
 </p>
 
 <p>
-  <strong>Recipe:</strong>
-  <%= @checkin.recipe_id %>
+  <strong>Category:</strong>
+  <%= @checkin.category_id %>
 </p>
 
 <%= link_to 'Edit', edit_checkin_path(@checkin) %> |
