--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :score %><br>
     <%= f.number_field :score %>
   </div>
+  <div class="field">
+    <%= f.label :image_id %><br>
+    <%= f.text_field :name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
