--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,6 +7,7 @@
       <th>Name</th>
       <th>Description</th>
       <th>Score</th>
+      <th>Image_id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= category.name %></td>
         <td><%= category.description %></td>
         <td><%= category.score %></td>
+        <td><%= category.image_id %></td>
         <td><%= link_to 'Show', category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
