--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,5 +15,10 @@
   <%= @category.score %>
 </p>
 
+<p>
+  <strong>Image_id:</strong>
+  <%= @category.image_id %>
+</p>
+
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
