--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :image_id %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :image_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
